--- a/index.html
+++ b/index.html
@@ -1,235 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shwet Shiva Printing | Premium Print Solutions</title>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<!-- SEO -->
-<title>Professional Printing Services in India | Shwet Shiva Printing</title>
-<meta name="description" content="High-quality printing services for business cards, brochures, banners, labels, packaging and corporate printing. Fast delivery, premium finishing, competitive pricing.">
-<meta name="keywords" content="printing services, business card printing, brochure printing, banner printing, packaging printing, stickers printing, custom printing india">
-<link rel="canonical" href="https://www.shwetshivaprinting.com/">
-
-<!-- Open Graph -->
-<meta property="og:title" content="Professional Printing Services in India | Shwet Shiva Printing">
-<meta property="og:description" content="Premium printing for business cards, brochures, banners, packaging, and more. Trusted by businesses across India.">
-<meta property="og:image" content="https://picsum.photos/1200/630?random=10">
-<meta property="og:type" content="website">
-
-<!-- Tailwind -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Animations -->
-<style>
-    .fade-in { animation: fadeIn 1.2s ease-in-out; }
-    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-    .slide-up { animation: slideUp 0.9s ease-out; }
-    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
-                         to { transform:translateY(0); opacity:1; } }
-
-    .zoom-hover:hover {
-        transform: scale(1.03);
-        transition: 0.3s ease;
-    }
-
-    .soft-hover:hover {
-        box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-        transition: 0.3s;
-    }
-
-    a, button { transition: all 0.3s ease; }
-</style>
+    <style>
+        :root {
+            --primary: #3b82f6;
+            --dark-bg: #0f172a;
+            --glass: rgba(255, 255, 255, 0.03);
+            --glass-border: rgba(255, 255, 255, 0.1);
+        }
+        body { 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background-color: var(--dark-bg); 
+            color: #f8fafc;
+        }
+        .glass-card {
+            background: var(--glass);
+            backdrop-filter: blur(12px);
+            border: 1px solid var(--glass-border);
+            border-radius: 24px;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+        .glass-card:hover {
+            transform: translateY(-10px);
+            background: rgba(255, 255, 255, 0.07);
+            border-color: var(--primary);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+        }
+        .text-gradient {
+            background: linear-gradient(to right, #fff, #3b82f6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .nav-link:hover { color: var(--primary); }
+    </style>
 </head>
+<body>
 
-<body class="bg-gray-50">
-
-<!-- ===================================================
- NAVIGATION
-==================================================== -->
-<header class="sticky top-0 bg-white shadow z-50">
-    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-        <a href="index.html" class="flex items-center space-x-3">
-            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">SS</div>
-            <div>
-                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
-                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
-            </div>
-        </a>
-
-        <div class="hidden md:flex space-x-8 font-semibold">
-            <a href="index.html" class="hover:text-blue-600">Home</a>
-
-            <!-- Products Dropdown -->
-            <div class="relative group cursor-pointer">
-                <span class="text-blue-600">Products</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-56 p-3 space-y-2">
-                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
-                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
-                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
-                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
-                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                    <hr>
-                    <a href="wedding-cards.html" class="block font-semibold text-blue-600">Wedding Cards</a>
-                    <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
-                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
-                </div>
-            </div>
-
-            <a href="services.html" class="hover:text-blue-600">Services</a>
-
-            <div class="relative group cursor-pointer">
-                <span class="hover:text-blue-600">Company</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-44 p-3 space-y-2">
-                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
-                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
-                </div>
-            </div>
+<nav class="sticky top-0 z-50 glass-card mx-4 mt-4 px-6 py-4 flex justify-between items-center backdrop-blur-md">
+    <a href="index.html" class="flex items-center space-x-3">
+        <div class="w-10 h-10 bg-blue-600 rounded-xl flex items-center justify-center font-bold text-white">SS</div>
+        <div>
+            <h1 class="text-xl font-extrabold tracking-tight">Shwet Shiva</h1>
+            <p class="text-[10px] uppercase tracking-widest text-blue-400 font-bold -mt-1">Print Studios</p>
         </div>
-
-        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
-    </nav>
-
-    <!-- Mobile -->
-    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
-        <a href="index.html" class="block py-2">Home</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium text-blue-600">Products</summary>
-            <div class="pl-4 space-y-1">
-                <a href="business-cards.html">Business Cards</a>
-                <a href="brochures.html">Brochures</a>
-                <a href="banners.html">Banners</a>
-                <a href="packaging.html">Packaging</a>
-                <a href="labels.html">Labels</a>
-                <a href="wedding-cards.html">Wedding Cards</a>
-                <a href="invitation-cards.html">Invitation Cards</a>
-                <a href="office-binding.html">Office Binding</a>
-            </div>
-        </details>
-
-        <a href="services.html" class="block py-2">Services</a>
-
-        <details class="py-2">
-            <summary class="cursor-pointer font-medium">Company</summary>
-            <div class="pl-4 space-y-1">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </details>
-    </div>
-</header>
-
-<script>
-document.getElementById("mobileBtn").onclick = () => {
-    document.getElementById("mobileMenu").classList.toggle("hidden");
-};
-</script>
-
-<!-- ===================================================
- HERO SECTION
-==================================================== -->
-<section class="relative fade-in">
-    <img src="https://picsum.photos/1920/600?random=1"
-         class="w-full h-[420px] object-cover brightness-75">
-
-    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
-        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">
-            Premium Printing Services
-        </h2>
-        <p class="mt-4 text-lg max-w-2xl slide-up">
-            High-quality printing for business cards, brochures, banners, packaging and all your branding needs.
-        </p>
-
-        <a href="services.html"
-           class="mt-6 bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg text-lg font-semibold shadow-lg slide-up">
-           Explore Services
-        </a>
-    </div>
-</section>
-
-<!-- ===================================================
- FEATURED PRODUCTS
-==================================================== -->
-<section class="container mx-auto px-6 py-16">
-    <h3 class="text-3xl font-bold text-center fade-in">Our Top Products</h3>
-    <p class="text-center text-gray-600 mt-3 mb-10 fade-in">
-        Best-selling print products loved by businesses across India.
-    </p>
-
-    <div class="grid md:grid-cols-3 gap-10">
-
-        <!-- Card 1 -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
-            <img src="https://picsum.photos/400/260?random=2"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Business Cards</h4>
-            <p class="text-gray-600 mt-2">Glossy, matte, textured & custom designs.</p>
-        </div>
-
-        <!-- Card 2 -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
-            <img src="https://picsum.photos/400/260?random=3"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Brochures</h4>
-            <p class="text-gray-600 mt-2">Tri-fold, bi-fold, Z-fold brochures & flyers.</p>
-        </div>
-
-        <!-- Card 3 -->
-        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
-            <img src="https://picsum.photos/400/260?random=4"
-                 class="rounded-lg mb-4 zoom-hover">
-            <h4 class="text-xl font-semibold">Packaging & Labels</h4>
-            <p class="text-gray-600 mt-2">Custom packaging boxes & stickers.</p>
-        </div>
-
-    </div>
-</section>
-
-<!-- ===================================================
- CTA STRIP
-==================================================== -->
-<section class="bg-blue-600 text-white py-14 text-center slide-up">
-    <h3 class="text-3xl font-bold">Need Custom Printing?</h3>
-    <p class="mt-3 text-lg">Share your requirement — we’ll get back within 24 hours!</p>
-
-    <a href="contact.html"
-       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
-       Contact Us
     </a>
+    <div class="hidden md:flex space-x-8 font-medium text-sm">
+        <a href="index.html" class="nav-link text-blue-400">Home</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+    </div>
+    <a href="tel:+918087220081" class="hidden md:block bg-blue-600 hover:bg-blue-700 px-5 py-2 rounded-full text-sm font-bold transition">Get Quote</a>
+</nav>
+
+<section class="relative pt-20 pb-32 px-6 overflow-hidden">
+    <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full h-full opacity-20 pointer-events-none">
+        <div class="absolute top-[-10%] left-[-10%] w-[40%] h-[60%] bg-blue-600 rounded-full blur-[120px]"></div>
+    </div>
+    
+    <div class="container mx-auto text-center relative z-10">
+        <span class="px-4 py-2 rounded-full bg-blue-500/10 text-blue-400 text-xs font-bold uppercase tracking-widest">Premium Quality Printing</span>
+        <h2 class="text-5xl md:text-7xl font-extrabold mt-8 mb-6 text-gradient italic">Your Vision, <br>Printed to Perfection.</h2>
+        <p class="text-gray-400 max-w-2xl mx-auto text-lg leading-relaxed mb-10">
+            From luxury business cards to industrial packaging, we provide high-precision printing solutions that make your brand stand out.
+        </p>
+        <div class="flex flex-col md:flex-row justify-center gap-4">
+            <a href="services.html" class="bg-blue-600 hover:bg-blue-700 px-10 py-4 rounded-2xl font-bold transition flex items-center justify-center gap-2">
+                Explore Products <i class="fas fa-arrow-right text-sm"></i>
+            </a>
+            <a href="https://wa.me/918087220081" class="glass-card px-10 py-4 rounded-2xl font-bold hover:bg-white/10 transition">
+                WhatsApp Us
+            </a>
+        </div>
+    </div>
 </section>
 
-<!-- ===================================================
- FOOTER
-==================================================== -->
-<footer class="bg-gray-900 text-gray-300 py-10">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
-
+<section class="container mx-auto px-6 py-20">
+    <div class="flex flex-col md:flex-row justify-between items-end mb-12">
         <div>
-            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
-            <p>Premium printing services with fast delivery & top quality.</p>
+            <h3 class="text-4xl font-bold mb-2">Signature Products</h3>
+            <p class="text-gray-400">Explore our most requested printing services.</p>
         </div>
+        <a href="services.html" class="text-blue-400 font-bold hover:underline mt-4 md:mt-0">View All Categories</a>
+    </div>
 
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <a href="business-cards.html" class="glass-card group p-4 overflow-hidden">
+            <div class="rounded-2xl overflow-hidden h-64 mb-6">
+                <img src="https://picsum.photos/500/500?print1" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+            </div>
+            <div class="p-2">
+                <h4 class="text-xl font-bold mb-2">Business Cards</h4>
+                <p class="text-gray-500 text-sm">Glossy, Matte, Velvet, and Metal finishes for elite networking.</p>
+            </div>
+        </a>
+
+        <a href="brochures.html" class="glass-card group p-4 overflow-hidden">
+            <div class="rounded-2xl overflow-hidden h-64 mb-6">
+                <img src="https://picsum.photos/500/500?print2" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+            </div>
+            <div class="p-2">
+                <h4 class="text-xl font-bold mb-2">Marketing Material</h4>
+                <p class="text-gray-500 text-sm">Tri-fold brochures, flyers, and catalogs with vibrant CMYK color.</p>
+            </div>
+        </a>
+
+        <a href="packaging.html" class="glass-card group p-4 overflow-hidden">
+            <div class="rounded-2xl overflow-hidden h-64 mb-6">
+                <img src="https://picsum.photos/500/500?print3" class="w-full h-full object-cover group-hover:scale-110 transition duration-700">
+            </div>
+            <div class="p-2">
+                <h4 class="text-xl font-bold mb-2">Luxury Packaging</h4>
+                <p class="text-gray-500 text-sm">Custom boxes and labels designed for a premium unboxing experience.</p>
+            </div>
+        </a>
+    </div>
+</section>
+
+<section class="bg-white/5 py-24 mb-20">
+    <div class="container mx-auto px-6 text-center">
+        <h3 class="text-3xl font-bold mb-16">Why Shwet Shiva?</h3>
+        <div class="grid md:grid-cols-4 gap-8">
+            <div class="p-6">
+                <i class="fas fa-bolt text-4xl text-blue-500 mb-6"></i>
+                <h5 class="font-bold mb-2 text-lg">Fast Delivery</h5>
+                <p class="text-gray-500 text-sm">Prompt turnaround times for all corporate and urgent orders.</p>
+            </div>
+            <div class="p-6">
+                <i class="fas fa-layer-group text-4xl text-blue-500 mb-6"></i>
+                <h5 class="font-bold mb-2 text-lg">Premium Stock</h5>
+                <p class="text-gray-500 text-sm">We use only the finest paper and high-grade industrial inks.</p>
+            </div>
+            <div class="p-6">
+                <i class="fas fa-check-circle text-4xl text-blue-500 mb-6"></i>
+                <h5 class="font-bold mb-2 text-lg">Quality Assurance</h5>
+                <p class="text-gray-500 text-sm">Every print goes through a strict multi-point color check.</p>
+            </div>
+            <div class="p-6">
+                <i class="fas fa-hand-holding-dollar text-4xl text-blue-500 mb-6"></i>
+                <h5 class="font-bold mb-2 text-lg">Best Value</h5>
+                <p class="text-gray-500 text-sm">Competitive wholesale pricing for high-volume orders.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="border-t border-gray-800 py-16 bg-black/50">
+    <div class="container mx-auto px-6 grid md:grid-cols-4 gap-12 text-gray-400">
+        <div class="col-span-1 md:col-span-2">
+            <h4 class="text-white text-2xl font-bold mb-4">Shwet Shiva Printing</h4>
+            <p class="max-w-sm mb-6">Elevating brands through high-precision printing and innovative design solutions since 2010.</p>
+            <div class="flex space-x-4">
+                <a href="#" class="w-10 h-10 rounded-full glass-card flex items-center justify-center hover:text-blue-400"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="w-10 h-10 rounded-full glass-card flex items-center justify-center hover:text-blue-400"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
         <div>
-            <h4 class="text-xl font-bold mb-3">Products</h4>
-            <ul class="space-y-1">
-                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
-                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
-                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
-                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
-                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
-                  <li><a href="wedding-cards.html" class="hover:text-white">Wedding Cards</a></li>
-                <li><a href="invitation-cards.html" class="hover:text-white">Invitation Cards</a></li>
-                <li><a href="office-binding.html" class="hover:text-white">Office Binding</a></li>
-            </ul>
+            <h5 class="text-white font-bold mb-4 uppercase text-xs tracking-widest">Contact</h5>
+            <p class="text-sm mb-2">+91 80872 20081</p>
+            <p class="text-sm">infoshwetshivaprinting@gmail.com</p>
         </div>
-
         <div>
-            <h4 class="text-xl font-bold mb-3">Contact</h4>
-            <p>Email: infoshwetshivaprinting@gmail.com</p>
-            <p>Phone: +91 80872 20081</p>
+            <h5 class="text-white font-bold mb-4 uppercase text-xs tracking-widest">Office</h5>
+            <p class="text-sm leading-relaxed">Randive galli, Purw, Kasaba Bawada, Kolhapur, Maharashtra 416006</p>
         </div>
-
+    </div>
+    <div class="text-center mt-16 text-xs text-gray-600">
+        &copy; 2026 Shwet Shiva Printing Studios. All rights reserved.
     </div>
 </footer>
 
